<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">APB Student</string>

    <string name="kws_caption">To trigger an alert say \"Activate\".</string>


    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="pass_hint">.........</string>
    <string name="sign_up">Sing Up</string>
    <string name="register">register</string>
    <string name="re_email">Your Email</string>
    <string name="re_password">your Password</string>
    <string name="sign_up_message">Your first Time?Sign Up Here</string>
    <string name="login_message">Login</string>
    <string name="l_email">Email</string>
    <string name="l_password">Password</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="title_activity_log">Sign in</string>
    <string name="already_account">Already have an account?Login Here</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_test">TestActivity</string>


    <string name="registerSetup">Setup Application</string>
    <string name="registerContinue">Setup Application</string>
    <string name="registerFinish">Finish</string>
    <string name="next">Next ></string>

    <string name="open">Open</string>
    <string name="close">Close</string>


    <string name="action_settings">Logout</string>

    <string name="title_login">Login</string>


    <string name="setup_username">Username</string>
    <string name="setup_fullname">Fullname</string>
    <string name="setup_idnumber">ID Number</string>
    <string name="setup_password">Password</string>
    <string name="setup_password_confirm">Confirm Password</string>
    <string name="setup_alertPhrase">Enter Alert Phrase</string>
    <string name="broadcast_intro_text">Send a broadcast message to all APB users to keep them updated with tips, threat or dangerous tips to help save a life.</string>
    <string name="menu_caption">Listening!!!!!!</string>
</resources>