<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".NextRegister">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/apbLogo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/apblogo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerSetup"
            android:textAllCaps="true"
            android:layout_marginTop="-10dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:textSize="25dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/regis_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:id="@+id/regis_username"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:padding="5dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/outline"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"

            android:hint="@string/setup_username"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <EditText
            android:id="@+id/regis_fullname"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/outline"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"

            android:hint="@string/setup_fullname"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <!-- gender -->



        <Spinner
            android:id="@+id/genderSpinner"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/outline"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

<!--            android:backgroundTint="@color/colorPrimaryDark"-->





        <Button
            android:id="@+id/nextBtn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="10dp"
            android:enabled="true"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.558"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.397" />



    </LinearLayout>

</LinearLayout>