<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".FinishSetup">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/apbLogo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/apblogo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerFinish"
            android:textAllCaps="true"
            android:layout_marginTop="-10dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:textSize="25dp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/regis_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/regis_idnumber"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:padding="5dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/outline"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"

            android:hint="@string/setup_idnumber"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:autofillHints="@string/setup_idnumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/regis_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/outline"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"

            android:hint="@string/setup_password"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--  confirm password -->
        <EditText
            android:id="@+id/regis_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/outline"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"

            android:hint="@string/setup_password_confirm"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ProgressBar
            android:id="@+id/mProgressBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>




        <Button
            android:id="@+id/register_btnFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="10dp"
            android:enabled="true"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"
            android:text="@string/registerFinish"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.558"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.397" />



    </LinearLayout>

</LinearLayout>