<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:orientation="vertical"
    tools:context="edu.cmu.pocketsphinx.demo.LoginActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/apbLogo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/apblogo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_message"
            android:textAllCaps="true"
            android:layout_marginTop="-10dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:textSize="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Student"
            android:textAllCaps="true"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/color_grey"
            android:textSize="10dp"
            />

    </LinearLayout>


    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    xmlns:tools="http://schemas.android.com/tools"-->
    <!--    android:id="@+id/container"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->

    <!--    android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--    android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--    android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--    android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--    tools:context=".LoginActivity">-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/outline"
            android:padding="5dp"

            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:padding="5dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/outline"

            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="64dp"
            android:enabled="true"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"
            android:text="@string/action_sign_in_short"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up_message"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn"
            app:layout_constraintVertical_bias="0.093" />



        <ProgressBar
            android:id="@+id/login_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45" />
    </LinearLayout>











    <!--    <EditText-->
    <!--        android:id="@+id/email"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="24dp"-->
    <!--        android:layout_marginTop="96dp"-->
    <!--        android:layout_marginEnd="24dp"-->

    <!--        android:hint="@string/prompt_email"-->
    <!--        android:inputType="textEmailAddress"-->
    <!--        android:selectAllOnFocus="true"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/password"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="24dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:layout_marginEnd="24dp"-->

    <!--        android:hint="@string/prompt_password"-->
    <!--        android:imeActionLabel="@string/action_sign_in_short"-->
    <!--        android:imeOptions="actionDone"-->
    <!--        android:inputType="textPassword"-->
    <!--        android:selectAllOnFocus="true"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/email" />-->

    <!--    <Button-->
    <!--        android:id="@+id/login_btn"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="start"-->
    <!--        android:layout_marginStart="48dp"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:layout_marginEnd="48dp"-->
    <!--        android:layout_marginBottom="64dp"-->
    <!--        android:enabled="true"-->
    <!--        android:text="@string/action_sign_in_short"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/password"-->
    <!--        app:layout_constraintVertical_bias="0.2" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/sign_up"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="center"-->
    <!--        android:text="@string/sign_up_message"-->
    <!--        android:textColor="@color/colorPrimaryDark"-->
    <!--        android:textSize="14sp"-->
    <!--        android:visibility="visible"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/login_btn"-->
    <!--        app:layout_constraintVertical_bias="0.093" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/reg"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="40dp"-->
    <!--        android:text="login"-->
    <!--        android:textAlignment="center"-->
    <!--        android:textAllCaps="true"-->
    <!--        android:textColor="@color/colorPrimary"-->
    <!--        android:textSize="30sp"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/email"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.498"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.68" />-->

    <!--    <ProgressBar-->
    <!--        android:id="@+id/login_progressBar"-->
    <!--        style="?android:attr/progressBarStyle"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:visibility="gone"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.45" />-->

</LinearLayout>
